# cpp-boilerplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
unittest/: CMakeLists.txt
unittest/src/: CMakeLists.txt  test.cpp
